[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panim"
version = "0.1.1dev"
description = "Plotting API for the visualization of light pulses."
keywords = ["plots", "physics", "optics"]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"
dependencies = [
    "ipython",
    "jupyter",
    "matplotlib",
    "numpy",
    "scipy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/joschkabirk/panim"

[tool.setuptools]
packages = ["panim"]
zip-safe = false
include-package-data = true

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "types-tqdm",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
