[metadata]
name = panim
description = Plotting API for the visualisation of light pulses.
version = attr: panim.__version__
keywords = plots, physics, optics
url = https://github.com/jobirk/chirped_pulse_animation

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires=
    ipython
    jupyter
    matplotlib
    numpy
    scipy
    tqdm
packages = find: